# lattice-aif

./: .gitignore  LICENSE  README.md  contribute.md  mkdocs.yml  pyproject.toml  tests.py
.github/workflows/: docs.yml  python-tests.yml
docs/: AgentAI.md  CONTRIBUTING.md  build_docs.py  details.md  docs.html  get-started.md  getting-started.md  index.html  index.md  latticeaif.mermaid  server-api.md
docs/journals/: research.tex
docs/schemas/: RecallTools.json  ToolConfig.json  openapi.json
examples/fs_server/: README.md  app.py  requirements.txt
lattice-client/: README.md  go.mod  main.go  pyproject.toml  requirements-dev.txt
lattice-client/cmds/: agents.go  ask.go  auth.go  config.go  connections.go  models.go  prompts.go  root.go  tools.go
lattice-client/src/latticepy/client/: __init__.py  cli.py  ui.py
lattice-client/tests/: conftest.py  test_toolsdata.py
lattice-engine/: README.md  pyproject.toml  requirements.txt
lattice-engine/LatticePy/: .gitignore
lattice-engine/LatticePy/interfaces/: serverinterface.py
lattice-engine/src/latticepy/engine/: latticeai.py
lattice-engine/src/latticepy/engine/interfaces/: agentinterface.py  chatinterface.py  clientinterface.py  llminterface.py  localdatabase.py  serverinterface.py  socketserver.py  webserver.py
lattice-engine/src/latticepy/engine/services/: localdatabase.py  socketserver.py  toolengine.py  webserver.py
lattice-engine/src/latticepy/engine/utils/: RAG.py
lattice-server/: README.md  pyproject.toml
lattice-server/src/latticepy/server/: __init__.py  tool.py
lattice-server/tests/: test_api.py
