[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latticepy"
version = "0.1.0"
description = "Complete LatticePy suite - client and server"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "lattice-client==0.1.0",
    "lattice-server==0.1.0",
]

[project.optional-dependencies]
dev = [
    "lattice-client[dev]==0.1.0",
    "lattice-server[dev]==0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/LatticePy"
Repository = "https://github.com/yourusername/LatticePy"
Issues = "https://github.com/yourusername/LatticePy/issues"