[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lattice-client"
version = "0.1.0"
description = "CLI client for LatticePy"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.scripts]
lattice = "latticepy.client.cli:main"
latticepy-client = "latticepy.client.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/LatticePy"
Repository = "https://github.com/yourusername/LatticePy"
Issues = "https://github.com/yourusername/LatticePy/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["latticepy*"]

# Enable namespace package
[tool.setuptools.package-dir]
"" = "src"